# macvdmtool

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
include/: Makefile.am  macvdm.h
src/: Makefile.am  libmacvdm-1.0.pc.in
tools/: Makefile.am  macvdmtool.c
